<resources>
    <string name="app_name" translatable="false">Touch Tablet App</string>
    <string name="settings">Settings</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="refresh">Refresh</string>
    <string name="ndalur">OFF</string>
    <string name="ndezur">ON</string>
    <string name="kontakt">CONTACT</string>
    <string name="txt">Txt</string>

    <string name="battery">BATTERY</string>
    <string name="vl_battery">0 %</string>

    <string name="intensity">INTESITY</string>
    <string name="vl_intensity">NoN</string>

    <string name="voltage">VOLTAGE</string>
    <string name="vl_voltage">NoN</string>

    <string name="speed">SPEED</string>
    <string name="vl_speed">0 km/h</string>

    <string name="range">RANGE</string>
    <string name="vl_range">NoN</string>

    <string name="rpm">RPM</string>
    <string name="vl_rpm">NoN</string>

    <string name="temp">TEMPERATURE</string>
    <string name="vl_temp">0 °C</string>

    <string name="clear">Clear</string>
    <string name="begin">Begin</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="button">Button</string>
    <string name="lang">Language</string>
    <string name="bateria">bateria</string>
    <string name="temperatura">temperatura</string>

</resources>
